[package]
name = "flightstream-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.22", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_json = "1.0.140"
xplane-sdk-sys = { git = "https://github.com/jct32/xplane-sdk", version = "0.4.0" }
xplm = "0.4.2"


[lib]
crate-type = ["cdylib"]
